--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,1 @@
-spring:
-  profiles: docker
-  data:
-    mongodb:
-    host: mongo
-
----
-spring:
-  profiles: local
-  data:
-    mongodb:
-      host: localhost
+spring.data.mongodb.host: mongo
