--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,11 @@
-spring.data.mongodb.host: mongo
+spring:
+  profiles: local
+  data:
+    mongodb:
+      host: localhost
+---
+spring:
+  profiles: docker
+  data:
+    mongodb:
+      host: mongo
